--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "bootstrap": "^4.5.0",
+    "bootstrap": "4.5.0",
     "jquery": "^3.5.1",
     "monaco-editor": "^0.48.0",
     "nuxt": "^3.11.2",
