Add Footer version

--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
+    "build": "yarn generate:commit-hash && nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "start": "node .output/server/index.mjs"
+    "start": "node .output/server/index.mjs",
+    "generate:commit-hash": "git rev-parse --short HEAD > public/commit-hash.txt"
   },
   "dependencies": {
     "bootstrap": "4.5.0",
